--- a/NC.GameStore/NC.GameStore.WebApp/Views/Home/Index.cshtml
+++ b/NC.GameStore/NC.GameStore.WebApp/Views/Home/Index.cshtml
@@ -10,17 +10,17 @@
             <br />
         </div>
         <div class="row">
-            <div class="col-md-3 text-center wow fadeInRight">
+            <div class="col-md-3 text-center animated fadeInDown">
             </div>
             <div class="col-md-6 text-center animated fadeInDown">
                 <img src="~/image/laptop.png" alt="dashboard" class="img-responsive">
             </div>
-            <div class="col-md-3 text-center wow fadeInRight">
+            <div class="col-md-3 text-center animated fadeInDown">
             </div>
         </div>
         <div class="row animated fadeIn">
             <br />
-            <p>To access the project repository <a href="https://github.com/eusouleoandrade/Nutcache/tree/master/NC.GameStore">click here</a>.</p>
+            <p>To access the project repository <a href="https://github.com/eusouleoandrade/NC" target="_blank">click here</a>.</p>
         </div>
     </section>
 </div>
