--- a/NC.GameStore/NC.GameStore.WebApp/Views/Shared/_Navigation.cshtml
+++ b/NC.GameStore/NC.GameStore.WebApp/Views/Shared/_Navigation.cshtml
@@ -23,7 +23,7 @@
                 <a href="@Url.Action("Index", "BoardGame", new { area = "" })"><i class="fa fa-gamepad"></i> <span class="nav-label">Board Game</span></a>
             </li>
             <li>
-                <a href="https://github.com/eusouleoandrade/Nutcache/tree/master/NC.GameStore" target="_blank"><i class="fa fa-code"></i> <span class="nav-label">Code Repository</span></a>
+                <a href="https://github.com/eusouleoandrade/NC" target="_blank"><i class="fa fa-code"></i> <span class="nav-label">Code Repository</span></a>
             </li>
         </ul>
     </div>
