--- a/NC.GameStore/NC.GameStore.WebApp/Views/BoardGame/Create.cshtml
+++ b/NC.GameStore/NC.GameStore.WebApp/Views/BoardGame/Create.cshtml
@@ -21,47 +21,7 @@
 <form asp-action="Create">
     <div class="wrapper wrapper-content animated fadeInDown">
         <div class="panel panel-primary">
-            <div class="panel-body">
-                <div class="form-horizontal">
-                    @Html.AntiForgeryToken()
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
-                        <label asp-for="Title" class="control-label col-md-2"></label>
-                        <div class="col-md-10">
-                            <input asp-for="Title" class="form-control" />
-                            <span asp-validation-for="Title" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="PublishingCompany" class="control-label col-md-2"></label>
-                        <div class="col-md-10">
-                            <input asp-for="PublishingCompany" class="form-control" />
-                            <span asp-validation-for="PublishingCompany" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="MinPlayers" class="control-label col-md-2"></label>
-                        <div class="col-md-10">
-                            <input asp-for="MinPlayers" class="form-control" />
-                            <span asp-validation-for="MinPlayers" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="MaxPlayers" class="control-label col-md-2"></label>
-                        <div class="col-md-10">
-                            <input asp-for="MaxPlayers" class="form-control" />
-                            <span asp-validation-for="MaxPlayers" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Price" class="control-label col-md-2"></label>
-                        <div class="col-md-10">
-                            <input asp-for="Price" class="form-control" />
-                            <span asp-validation-for="Price" class="text-danger"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            @Html.Partial("~/Views/BoardGame/_CreateEditPartial.cshtml", Model)
             <div class="panel-footer panel-info">
                 <div class="row">
                     <div class="col-md-offset-2 col-md-10">
