--- a/NC.GameStore/NC.GameStore.WebApp/Views/BoardGame/Delete.cshtml
+++ b/NC.GameStore/NC.GameStore.WebApp/Views/BoardGame/Delete.cshtml
@@ -20,47 +20,8 @@
 
 <div class="wrapper wrapper-content animated fadeInDown">
     <div class="panel panel-primary">
-        <div class="panel-body">
-            <div class="form-horizontal">
-                <div class="form-group">
-                    <label asp-for="Id" class="control-label col-md-2"></label>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Title" class="control-label col-md-2"></label>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PublishingCompany" class="control-label col-md-2"></label>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.PublishingCompany, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label asp-for="MinPlayers" class="control-label col-md-2"></label>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.MinPlayers, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label asp-for="MaxPlayers" class="control-label col-md-2"></label>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.MaxPlayers, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Price" class="control-label col-md-2"></label>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="panel-footer panel-info">
+        @Html.Partial("~/Views/BoardGame/_DeleteDetailsPartial.cshtml", Model)
+        <div class="panel-footer">
             <a asp-action="Index" class="btn btn-white">Back to List</a>
             <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#deleteConfirmationModal">
                 Delete
