--- a/NC.GameStore/NC.GameStore.WebApp/Views/Home/Index.cshtml
+++ b/NC.GameStore/NC.GameStore.WebApp/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <section class="container features">
-        <div class="row animated fadeIn">
+        <div class="row animated fadeInRight">
             <h1 class="display-4">Welcome</h1>
             <h3>Project developed for the selection test for software engineer at Nutcache.</h3>
             <br />
@@ -18,7 +18,7 @@
             <div class="col-md-3 text-center animated fadeInDown">
             </div>
         </div>
-        <div class="row animated fadeIn">
+        <div class="row animated fadeInLeft">
             <br />
             <p>To access the project repository <a href="https://github.com/eusouleoandrade/NC" target="_blank">click here</a>.</p>
         </div>
